# game_of_life

./: .gitignore  CMakeLists.txt
include/: Game.h  Spawner.h  main.h
include/Handlers/: keyboardHandler.h  mouseHandler.h
src/: Game.cpp  Spawner.cpp  main.cpp
src/Handlers/: keyboardHandler.cpp  mouseHandler.cpp
